# ComfyUI-Easy-IndexTTS2

./: .gitignore  LICENSE  README.md  __init__.py  config.yaml  nodes.py  pyproject.toml  requirements.txt
example_workflows/: indextts2-basic.json  indextts2-basic_emo.json  indextts2-multi_emo.json  indextts2-ref_audios.json
indextts2/: __init__.py  infer.py  model_loader.py  utils.py
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
