[project]
name = "comfyui-easy-indextts2"
description = "A ComfyUI custom node for zero-shot text-to-speech synthesis system."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=1.12.0", "numpy>=1.20.0", "scipy>=1.7.0", "librosa>=0.8.0", "soundfile>=0.10.0", "PyYAML>=6.0", "pynini==2.1.5; platform_system!=\"Windows\"", "WeTextProcessing>=1.0.3; platform_system!=\"Windows\"", "modelscope"]

[project.urls]
Repository = "https://github.com/yolain/ComfyUI-Easy-IndexTTS2"

[tool.comfy]
PublisherId = "yolain"
DisplayName = "ComfyUI-Easy-IndexTTS2"
Icon = ""